# DogStory

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: main.cpp  ticker.cpp  ticker.h
src/app/: application.cpp  application.h  game_session.cpp  game_session.h  player.cpp  player.h  use_cases.cpp  use_cases.h
src/database/: connection_pool.h  database.cpp  database.h  database_invariants.h  db_connection_settings.h  player_record.h
src/game_data_store/: model_serialization.cpp  model_serialization.h
src/json/: json_deserializer.cpp  json_deserializer.h  json_key.h  json_serializer.cpp  json_serializer.h
src/logger/: logger.cpp  logger.h
src/model/: collision_detector.cpp  collision_detector.h  geom.h  item_dog_provider.cpp  item_dog_provider.h  loot_generator.cpp  loot_generator.h  model.cpp  model.h  model_constants.h  tagged.h
src/web/: api_handler.cpp  api_handler.h  file_handler.cpp  file_handler.h  http_server.cpp  http_server.h  logging_request_handler.h  request_handler.cpp  request_handler.h  response.cpp  response.h
tests/: collision-detector-tests.cpp  loot_generator_tests.cpp
